# palworld-guild-save-fix

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: Level.sav
src/: character_save_parameter.rs  group_guild.rs  main.rs  sav.rs
templates/: PalIndividualCharacterSaveParameter.json
