[package]
name = "palworld-guild-save-fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
flate2 = "1.0.28"
indexmap = "2.1.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uesave = { git = "https://github.com/CirnoV/uesave-rs.git" }
uuid = "1.7.0"
winnow = { version = "0.5.34", features = ["simd"] }

[features]
debug = ["winnow/debug"]
